fix: part of the text is not visible on windows

--- a/client/modules/Chat/Message/Message.less
+++ b/client/modules/Chat/Message/Message.less
@@ -113,6 +113,7 @@
     user-select: text;
     word-break: break-word;
     overflow: hidden;
+    line-height: 17px;
 }
 
 .imageMessage {
